# hybridroots

./: .gitattributes  .gitignore  01-Normal-Bisection.py  02-Normal-FalsePosition.py  03-Trisection.py  04-Badr-2021-A-Comparative-Study-among-New-Hybrid-Root-Finding-Algorithms-Hybrid-Blend-Trisection-Falseposition.py  05-Sabharwal-2019-Hybrid-Blend-Bisection-Falseposition.py  06-Optimized-Bisection-FalsePosition.py  07-Optimized_Bisection-FalsePosition-Modified-Secant.py  08-Optimized-Trisection-FalsePosition.py  09-Optimized-Trisection-FalsePosition-Modified-Secant.py  10-Implemnted-Brent,R.P-1973.py  11-Scipy-Brent,R.P-1973.py  12-Quadratic-Interval-Refinement.py  Algorithm_CPU_Time_ns_Matrix.csv  Algorithm_CPU_Time_us_Matrix.csv  Algorithm_Iterations_Matrix.csv  CPU_Times_Per_Algorithm.csv  CPU_Times_Per_Algorithm.xlsx  CPU_Times_Per_Algorithm_Enhanced.csv  CPU_Times_Per_Problem_Per_Algorithm.csv  Iterations_Per_Algorithm.csv  Pairwise_Median_Ratios.csv  Paper Repo.sln  README.md  Results.db  analyze_results.py  benchmarker.py  composer.json  config.json  dataset.json  hybrid_root_bracketing_paper.tex  hybrid_root_bracketing_paper_blended.tex  iteration_per_problem_and_algorithm.csv  result.txt  reviewers_comments_addressed.tex  temp.csv  title_page_hybrid_root_bracketing_paper.tex  update_db_names.py
.github/workflows/: benchmark.yml
Figures and Tables/: Iterations_Per_Algorithm.csv  Pairwise_Median_Ratios.csv
Paper Experiment and Results/: 01-Normal-Bisection.py  02-Normal-FalsePosition.py  03-Trisection.py  06-Optimized-Bisection-FalsePosition.py  09-Optimized-Trisection-FalsePosition-Modified-Secant.py  11-Scipy-Brent,R.P-1973.py  Algorithm_Iterations_Matrix.csv  CPU_Times_Per_Algorithm.csv  Complexity_Per_Algorithm.csv  analyze_results.py  config.json  dataset.json
hybridroots python package/: README.md  pyproject.toml
hybridroots python package/hybridroots/: .gitignore  __init__.py  benchmarks.py  core.py  tests.py
hybridroots-c/: CMakeLists.txt  README.md
hybridroots-c/include/: hybridroots.h
hybridroots-c/src/: hybridroots.c
hybridroots-c/tests/: benchmarks.c
hybridroots-cpp/: CMakeLists.txt  README.md
hybridroots-cpp/include/: hybridroots.hpp
hybridroots-cpp/tests/: benchmarks.cpp
hybridroots-dotnet/: Core.cs  Program.cs  README.md  hybridroots-dotnet.csproj
hybridroots-java/: README.md  pom.xml
hybridroots-java/src/main/java/com/hybridroots/: Benchmarks.java  Function.java  HybridRoots.java  HybridRootsInfo.java  HybridRootsResult.java
hybridroots-js/: README.md  benchmarks.js  core.js  package.json
hybridroots-php/: README.md  benchmarks.php  composer.json
hybridroots-php/src/: Core.php
hybridroots-python/: LICENSE  README.md  pyproject.toml
hybridroots-python/hybridroots/: benchmarks.py
hybridroots-rust/: Cargo.toml  README.md
hybridroots-rust/src/: lib.rs  main.rs
scripts/: check_plots_debug.py  compute_iteration_stats.py  diagnose_overall_order.py  inspect_db.py  iter_stats_from_tex.py
tools/: test_boundary_roots.py  tmp_problem_40.json
