[package]
name = "hybridroots"
version = "1.0.0"
edition = "2021"
authors = ["Abdelrahman Ellithy"]
description = "Four Multi-Phase Hybrid Bracketing Algorithms for Numerical Root Finding"
license = "Apache-2.0"
repository = "https://github.com/Abdelrhman-Ellithy/hybridroots"
homepage = "https://github.com/Abdelrhman-Ellithy/hybridroots"
documentation = "https://docs.rs/hybridroots"
readme = "README.md"
keywords = ["root-finding", "numerical", "bracketing", "bisection", "mathematics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]

[[bin]]
name = "benchmarks"
path = "src/main.rs"
