[package]
name = "hybridroots"
version = "1.0.0"
edition = "2021"
authors = ["Abdelrahman Ellithy"]
description = "Four novel multi-phase hybrid bracketing algorithms (Opt.BF, Opt.BFMS, Opt.TF, Opt.TFMS) for numerical root finding with superior convergence. Combines bisection/trisection, false position, and modified secant. Reference DOI: 10.21608/joems.2026.440115.1078"
license = "Apache-2.0"
repository = "https://github.com/Abdelrhman-Ellithy/hybridroots"
homepage = "https://github.com/Abdelrhman-Ellithy/hybridroots"
documentation = "https://docs.rs/hybridroots"
readme = "README.md"
keywords = ["root-finding", "numerical", "bracketing", "bisection", "mathematics"]
categories = ["mathematics", "science", "algorithms"]

[dependencies]

[[bin]]
name = "benchmarks"
path = "src/main.rs"
